--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+    
 
-        
+        {
+            "name": "Launch Edge",
+            "request": "launch",
+            "type": "msedge",
+            "url": "http://localhost:5501",
+            "webRoot": "${workspaceFolder}"
+        },
         {
             "name": "Attach to Chrome",
             "port": 5501,
